--- a/app/src/main/res/layout/item_profil_biodata_alamat_list.xml
+++ b/app/src/main/res/layout/item_profil_biodata_alamat_list.xml
@@ -4,21 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/layout_padding">
+    android:padding="@dimen/layout_padding"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/tv_form_alamat_text"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:lineSpacingExtra="4sp"
         android:maxLines="2"
         android:text="Jalan Kulintang, Gang Cipari no. 33 Blok A RT. 36 RW. 10, Kelurahan Dadi Mulya, Kecamatan Samarinda Ulu, Samarinda, Kalimantan Timur, 75123"
         android:textColor="@color/gray_600"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_form_alamat_list_check"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_form_alamat_kota_text" />
@@ -27,17 +31,28 @@
         android:id="@+id/tv_form_alamat_kota_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Samarinda, Kalimantan Timur"
         android:textAllCaps="true"
         android:textColor="@color/gray_800"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_form_alamat_text"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_form_alamat_list_check"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_form_alamat_list_check"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icon_check" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
