--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.liveOrder.OrderFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_fragment_order"
+        android:id="@+id/toolbar_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.RimeSyariFix.ToolBar"
@@ -25,7 +25,7 @@
         app:tabMode="scrollable"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_fragment_order" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_order" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_list_order"
