--- a/app/src/main/res/layout/item_home_produk_grid.xml
+++ b/app/src/main/res/layout/item_home_produk_grid.xml
@@ -8,8 +8,7 @@
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     app:cardCornerRadius="4dp"
-    app:cardElevation="2dp"
-    android:focusable="true">
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
