--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,6 @@
     <color name="pink_700">#BE185D</color>
     <color name="pink_800">#9D174D</color>
     <color name="pink_900">#831843</color>
+
+    <color name="yellow_300">#FDE047</color>
 </resources>
