--- a/app/src/main/res/layout/fragment_form_profil_biodata.xml
+++ b/app/src/main/res/layout/fragment_form_profil_biodata.xml
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tl_form_form_profil_biodata_edit_profil_nama_lengkap">
+        app:layout_constraintTop_toBottomOf="@+id/tl_form_profil_biodata_jenis_kelamin">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_form_profil_biodata_tempat_lahir"
@@ -149,6 +149,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Alamat" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tl_form_profil_biodata_jenis_kelamin"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:boxBackgroundMode="outline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tl_form_form_profil_biodata_edit_profil_nama_lengkap">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_form_profil_biodata_jenis_kelamin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Jenis Kelamin" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
