--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar_fragment_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minWidth="?attr/actionBarSize"
+        android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.RimeSyariFix.ToolBar"
         android:background="@color/white"
         app:layout_anchorGravity="center"
@@ -23,8 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
         app:cardMaxElevation="2dp"
@@ -44,6 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:paddingTop="@dimen/layout_padding"
         app:layout_constraintBottom_toBottomOf="parent"
